admin panel 99% finished

--- a/web/bootstrap-3.3.6-dist/css/customized_css.css
+++ b/web/bootstrap-3.3.6-dist/css/customized_css.css
@@ -233,3 +233,10 @@ ul.mail-list li span.mail-message-preview{
 .mail-search{
     border-bottom-color:#7FBCC9!important; 
 }
+
+.center-cropped {
+  width: 1920px;
+  height: 250px;
+  background-position: center center;
+  background-repeat: no-repeat;
+}
